cmake_minimum_required(VERSION 3.10)

include(CTest)

project(IntegerTests)
add_executable(IntegerTests gauss/Algebra/Integer.cpp)
target_link_libraries(IntegerTests gauss)
target_include_directories(IntegerTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME IntegerTests COMMAND IntegerTests)

project(IntTests)
add_executable(IntTests gauss/Algebra/Int.cpp)
target_link_libraries(IntTests gauss)
target_include_directories(IntTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME IntTests COMMAND IntTests)

project(ExpressionTests)
add_executable(ExpressionTests gauss/Algebra/Expression.cpp)
target_link_libraries(ExpressionTests gauss)
target_include_directories(ExpressionTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ExpressionTests COMMAND ExpressionTests)

project(MatrixTests)
add_executable(MatrixTests gauss/Algebra/Matrix.cpp)
target_link_libraries(MatrixTests gauss)
target_include_directories(MatrixTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME MatrixTests COMMAND MatrixTests)

project(LexerTests)
add_executable(LexerTests gauss/Algebra/Lexer.cpp)
target_link_libraries(LexerTests gauss)
target_include_directories(LexerTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME LexerTests COMMAND LexerTests)

project(ParserTests)
add_executable(ParserTests gauss/Algebra/Parser.cpp)
target_link_libraries(ParserTests gauss)
target_include_directories(ParserTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ParserTests COMMAND ParserTests)

project(PolynomialTests)
add_executable(PolynomialTests gauss/Polynomial/Polynomial.cpp)
target_link_libraries(PolynomialTests gauss)
target_include_directories(PolynomialTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME PolynomialTests COMMAND PolynomialTests)

project(ResultantTests)
add_executable(ResultantTests gauss/Polynomial/Resultant.cpp)
target_link_libraries(ResultantTests gauss)
target_include_directories(ResultantTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ResultantTests COMMAND ResultantTests)

project(GaloisFieldTests)
add_executable(GaloisFieldTests gauss/GaloisField/GaloisField.cpp)
target_link_libraries(GaloisFieldTests gauss)
target_include_directories(GaloisFieldTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME GaloisFieldTests COMMAND GaloisFieldTests)

project(CalculusTests)
add_executable(CalculusTests gauss/Calculus/Calculus.cpp)
target_link_libraries(CalculusTests gauss)
target_include_directories(CalculusTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME CalculusTests COMMAND CalculusTests)

project(FactorizationSquareFreeTests)
add_executable(FactorizationSquareFreeTests gauss/Factorization/SquareFree.cpp)
target_link_libraries(FactorizationSquareFreeTests gauss)
target_include_directories(FactorizationSquareFreeTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME FactorizationSquareFreeTests COMMAND FactorizationSquareFreeTests)

project(FactorizationHenselTests)
add_executable(FactorizationHenselTests gauss/Factorization/Hensel.cpp)
target_link_libraries(FactorizationHenselTests gauss)
target_include_directories(FactorizationHenselTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME FactorizationHenselTests COMMAND FactorizationHenselTests)

project(FactorizationZassenhausTests)
add_executable(FactorizationZassenhausTests gauss/Factorization/Zassenhaus.cpp)
target_link_libraries(FactorizationZassenhausTests gauss)
target_include_directories(FactorizationZassenhausTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME FactorizationZassenhausTests COMMAND FactorizationZassenhausTests)

project(FactorizationWangTests)
add_executable(FactorizationWangTests gauss/Factorization/Wang.cpp)
target_link_libraries(FactorizationWangTests gauss)
target_include_directories(FactorizationWangTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME FactorizationWangTests COMMAND FactorizationWangTests)

project(PolynomialRootsTests)
add_executable(PolynomialRootsTests gauss/Polynomial/Roots.cpp)
target_link_libraries(PolynomialRootsTests gauss)
target_include_directories(PolynomialRootsTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME PolynomialRootsTests COMMAND PolynomialRootsTests)

project(GaussAPITests)
add_executable(GaussAPITests gauss/Gauss.cpp)
target_link_libraries(GaussAPITests gauss)
target_include_directories(GaussAPITests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME GaussAPITests COMMAND GaussAPITests)
